--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gracias por tu mensaje</title>
 
-  <link rel="stylesheet" href="gracias.css">
+  <link rel="stylesheet" href="styles.css">
   <!-- Archivo JS interno -->
   <script defer src="index.js"></script>
   <link rel="icon" href="media/logo.png">
